@@ -1,3 +1,10 @@
+2007-04-16  Xan Lopez  <xan.lopez@nokia.com>
+
+	* src/hildon.h:
+	* examples/hildon-bread-crumb-trail-example.c:
+
+	Fix example.
+
 2007-04-16  Michael Dominic K.  <mdk@mdk.am> 
 
 	* debian/changelog: Removing the bug-fixed entries that were actually
